--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "astro": "^5.7.12",
-    "sharp": "^0.33.5",
     "node-vibrant": "^3.2.1-alpha.1",
-    "png-to-ico": "^2.1.8"
+    "png-to-ico": "^2.1.8",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
@@ -29,7 +29,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.12.0",
     "autoprefixer": "^10.4.21",
-    "axe-core": "^4.10.4",
+    "axe-core": "^4.10.3",
     "jest": "^29.7.0",
     "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "^29.7.0",
