enhaced files commit

--- a/.github/workflows/generate-client-site.yml
+++ b/.github/workflows/generate-client-site.yml
@@ -211,10 +211,20 @@ jobs:
       
       - name: Commit and push changes
         run: |
-          git add .
+          # Show what files exist before adding
+          echo "=== Files in working directory ==="
+          find . -name "*.js" -o -name "*.astro" -o -name "*.css" -o -name "*.json" -o -name "*.md" -o -name "*.png" -o -name "*.webp" -o -name "*.ico" | grep -E "(src/|public/)" | sort
+          
+          # Add all files explicitly
+          git add src/ public/ || true
           # Remove temp file from staging
           git reset HEAD temp/extracted_colors.json || true
+          
+          echo "=== Git status after adding ==="
           git status
+          
+          echo "=== Files staged for commit ==="
+          git diff --cached --name-only
           
           if git diff --cached --quiet; then
             echo "No changes to commit"
