set the GITHUB_TOKEN to the PR

--- a/.github/workflows/generate-client-site.yml
+++ b/.github/workflows/generate-client-site.yml
@@ -244,6 +244,8 @@ jobs:
       
       - name: Create pull request
         id: create_pr
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Create PR using GitHub CLI
           PR_BODY="## 🎨 New Client Site Generated
