chore: add Python cache and temp directories to .gitignore
- Add __pycache__/ and *.py[cod] patterns for Python cache files
- Add scripts/__pycache__/ specifically for script cache
- Add temp/ directory for temporary workflow files
- Add *.tmp and *.log patterns for temporary files

Prevents tracking of temporary and cache files in git

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,14 @@ test-results/
 coverage/
 *-snapshots/
 **/*-snapshots/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+scripts/__pycache__/
+
+# Temporary files and directories
+temp/
+*.tmp
+*.log
